--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
     "pinia": "^2.2.6",
+    "rsocket-core": "^0.0.29-alpha.0",
+    "rsocket-websocket-client": "^0.0.29-alpha.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
