--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -1,3 +1,4 @@
 VITE_API_HOST="http://localhost:8083"
+VITE_RSOCKET_URL="ws://localhost:8086/rsocket"
 VITE_STORAGE_ID='d3541a1d-b22e-4203-aca0-330e7b1248ca'
 VITE_CORS_MODE='cors'
